styles.scss
/* ... */
@font-face {
  font-display: optional;
  font-family: Marianne;
  font-style: normal;
  font-weight: 700;
  src: url("./public/fonts/Marianne-Bold.woff2") format("woff2"),
       url("./public/fonts/Marianne-Bold.woff") format("woff")
}
$font-family-sans-serif: Marianne, Arial, sans-serif !default;

@import "./node_modules/bootstrap/scss/bootstrap.scss";

body {
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;

  @media screen and (width < $viewport-sm) {
    font-size: 14px !important;
    select,
    input,
    button,
    .form-control,
    .btn {
      font-size: 14px !important;
    }
  }
}

// Browser Hacks

_::-webkit-full-page-media,
_:future,
:root select {
  // https://browserstrangeness.bitbucket.io/css_hacks.html#safari
  -webkit-appearance: none;
  background-image: url("./public/img/chevron-down.png") !important;
  background-position: right 8px center;
  background-repeat: no-repeat;
  padding-right: 20px;
}

// Fixes a glitch in Chrome with input[number] making the arrows hardly
// actionnable when float numbers are rounded
input[type="number"].no-arrows {
  &::-webkit-outer-spin-button,
  &::-webkit-inner-spin-button {
    -webkit-appearance: none;
    margin: 0;
  }
  appearance: initial;
  -moz-appearance: textfield;
}

// Force-show number <input/> inc-dec arrows to the left of the field
.incdec-arrows-left {
  display: flex;

  &[type="number"]::-webkit-inner-spin-button,
  &[type="number"]::-webkit-outer-spin-button {
    opacity: 1;
    margin-left: 4px;
  }
}

// Bootstrap component/helper overrides, to match DSFR design guidelines
.badge {
  background-color: #fafafa;
  letter-spacing: 1px;
  line-height: 1.5;
  padding-bottom: calc($badge-padding-y + 1px);
  text-transform: uppercase;
  &-success {
    background-color: #b8fec9;
    color: $success;
  }
  &-danger {
    background-color: #ffe9e9;
    color: $danger;
  }
  &-info {
    background-color: #e8edff;
    color: $info;
  }
  &-warning {
    background-color: #feebd0;
    color: $warning;
  }
}

.btn {
  font-weight: 500 !important;
}

.card {
  img {
    border-top-left-radius: $border-radius;
    border-top-right-radius: $border-radius;
  }
}

.feedback {
  &-valid {
    border-color: $success;
  }

  &-invalid {
    border-color: $danger;
  }
}

.form-select {
  min-height: 37px;
  line-height: initial;
}

.form-select, .form-control, .input-group-text {
  border: 0 !important;
  box-shadow: inset 0 -2px 0 0 #3a3a3a;
}

input {
  &[type=checkbox].form-check-input {
    &:not(:checked) { background-color: $white }
    border-radius: 0.15em !important;
  }
  &[type=radio].form-check-input {
    &:not(:checked) { background-color: $white }
  }
}

.sticky {
  &-sm-top,
  &-md-top,
  &-lg-top,
  &-xl-top {
    position: -webkit-sticky;
  }
}

// Rapidoc overriden styles
// @see https://rapidocweb.com/css-parts.html
rapi-doc::part(section-endpoint-head-path) {
  font-size: 14px;
}

// App styles

body {
  // Note: This is for header and footer to fit the whole height of the
  // available viewport. Main content area is white background.
  min-width: 320px;
}

.bg {
  &-info {
    &-dark {
      background-color: $info;
    }
  }
}

q {
  quotes: "“" "”" "‘" "’";
  &::before {
    content: open-quote;
  }
  &::after {
    content: close-quote;
  }
}


.border{
  &-top-sm-0 {
    @media screen and (min-width: $viewport-sm) {
      border-top: 0 !important;
    }
  }
  &-start-sm {
    @media screen and (min-width: $viewport-sm) {
      border-left: 1px solid $border-color !important;
    }
  }
}


.bottomed-paragraphs {
  p:last-child {
    margin-bottom: 0;
  }
}

.inline-paragraphs {
  p {
    display: inline;
  }
}

.bg-primary-gradient {
  background: $primary;
  background: linear-gradient(15deg, #054a80, $primary);
}

.icon {
  position: relative;
}

.icon-snow {
  left: -5px;
  font-size: 8px;
  position: absolute;
  top: -2px;
}

.cursor {
  &-help {
    cursor: help;
  }

  &-pointer {
    cursor: pointer;
  }
}

.fs {
  &-7 {
    font-size: 0.875rem;
  }

  &-8 {
    font-size: 0.85rem;
  }

  &-9 {
    font-size: 0.75rem;
  }

  &-unit {
    font-size: min(0.7em, 24px);
  }

  &-80p {
    font-size: 80%;
  }
}

.fw {
  &-500 {
    font-weight: 500;
  }
}

.height-auto {
  // This class is to be used to circumvent a bug with Rapidoc where it sets the height of
  // the component parent element to `height: 100vh` for no reason.
  height: auto !important;
}

.invert {
  filter: invert(1);
}

.link {
  &-external:not(.link-external-muted) {
    &::after {
      font-family: "icomoon" !important;
      content: "\e908";
      display: inline-block;
      text-indent: 2px;
      font-size: 0.9em;
      color: currentColor;
      font-style: normal;
      font-weight: normal;
      font-variant: normal;
      text-transform: none;
      vertical-align: text-top;
      line-height: 1;
      -webkit-font-smoothing: antialiased;
      -moz-osx-font-smoothing: grayscale;
    }
  }

  &-email {
    &::before {
      font-family: "icomoon" !important;
      content: "\f0e0";
      display: inline-block;
      text-indent: 2px;
      font-size: 0.9em;
      color: currentColor;
      font-style: normal;
      font-weight: normal;
      font-variant: normal;
      text-transform: none;
      vertical-align: baseline;
      line-height: 1;
      margin-right: 3px;
      -webkit-font-smoothing: antialiased;
      -moz-osx-font-smoothing: grayscale;
    }
  }
}

.no {
  &-outline {
    &:focus, &:active {
      outline: none;
      box-shadow: none;
    }
  }

  &-scroll-chaining {
    // Avoid y-scroll chaining
    // @see https://ishadeed.com/article/prevent-scroll-chaining-overscroll-behavior/
    overscroll-behavior-y: contain;
    overflow-y: auto;
  }
}

.overflow {
  &-x-hidden {
    overflow-x: hidden;
  }

  &-y-scroll {
    overflow-y: scroll;
  }
}
/* ... */

